# reimbursement-atlas

./: .env.example  .gitignore  .pre-commit-config.yaml  .zenodo.json  ARTIFACT_MANIFEST.json  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  LICENSE  Makefile  NOTICE  README.md  REQUIREMENTS.md  SECURITY.md  pyproject.toml  renovate.json
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  branch-protection.example.yml  copilot-instructions.md  dependabot.yml  labels.yml
.github/ISSUE_TEMPLATE/: analysis-recipe.yml  analysis.yml  config.yml  parser.yml  quality-gate.yml  source-onboarding.yml  source.yml
.github/codeql/: codeql-config.yml
.github/generated-issues/: 001-add-source-version-schema-for-mbs-cms-clfs-and-nhs-genomic-directory.md  002-add-tiny-permissive-parser-fixtures-with-provenance-metadata.md  003-add-url-licence-verification-checklist-for-first-wave-sources.md  004-implement-mbs-xml-parser-prototype-to-scheduleitemrecord.md  005-implement-cms-clfs-parser-prototype-to-scheduleitemrecord.md  006-implement-nhs-genomic-directory-parser-prototype.md  007-implement-pbs-api-csv-parser-prototype-to-scheduleitemrecord.md  008-implement-cms-asp-parser-prototype-to-scheduleitemrecord.md  009-implement-cms-pfs-parser-prototype-to-scheduleitemrecord.md  010-define-genomics-pathology-basket-and-mapping-evidence-fields.md  011-add-loinc-hpo-hgnc-local-only-adapter-conventions.md  012-build-candidate-crosswalk-review-queue-format.md  013-validate-source-scoring-rubric-against-first-wave-sources.md  014-add-sensitivity-analysis-for-readiness-grade-thresholds.md  (+266 more)
.github/workflows/: ci.yml  (+25 more)
conductor/: DECISION_LOG.md  INDEX.md  TRACKS.md  backlog.yml  interfaces.yml  product.md  quality_gates.yml  risk_register.yml  roadmap.yml  tracks.yml  workflow.md
docs/: ANALYSES.md  ANALYSIS_RECIPES.md  API_MCP_CLI_PLAN.md  ARCHITECTURE_BOUNDARIES.md  CI_CD_BLEEDING_EDGE_HARDENING.md  CODEX_IMPORT_AND_TRACK_EXECUTION.md  COVERAGE_POLICY.md  DASHBOARD_HUMAN_REVIEW_RECORD.md  DASHBOARD_VALIDATION.md  DATABASE_REGISTRY_METADATA.md  DATA_ACQUISITION_AUTOMATION.md  DATA_DICTIONARY.md  DATA_GOVERNANCE.md  DATA_MODEL.md  DATA_QUALITY_GATES.md  DEPLOYMENT.md  DEVELOPMENT_CONTAINER.md  EVIDENCE_READINESS.md  EXACT_SOURCE_FILES.md  EXTERNAL_QUALITY_GATES.md  FAIRSHARING_ELIGIBILITY.md  FINAL_HANDOFF.md  FIRST_EXECUTABLE_SLICE.md  FUTURE_INTERFACES.md  GITHUB_AUTOMATION.md  GITHUB_PROJECT_EXPORT.md  GITHUB_PROJECT_PLAN.md  HANDOFF_PACKAGE_EXPORT.md  HISTORICAL_MBS_ARCHIVE.md  HISTORICAL_PBS_ARCHIVE.md  HISTORICAL_SOURCE_ARCHIVAL_AND_REPRODUCIBILITY.md  HUGGINGFACE_PUBLICATION.md  IMPLEMENTATION_BLUEPRINT.md  ISSUE_FORMS.md  LICENCE_DECISION_MATRIX.json  LICENCE_DECISION_MATRIX.md  LICENCE_REVIEW_QUEUE.md  LICENSING.md  LIVE_SOURCE_VALIDATION_PLAYBOOK.md  LOCAL_QUALITY_GATES.md  (+40 more)
mcp/: README.md  tools.seed.json
mojo/: README.md  fixed_width_tokenizer.mojo  fuzzy_join.mojo
papers/: reimbursement_atlas_methods.md
protocols/: README.md  cognitive_procedural_relativity_protocol.md  genomics_pathology_protocol.md  local_vs_national_coverage_protocol.md  medicine_price_opacity_protocol.md  source_transparency_protocol.md
reports/: cognitive_procedural_relativity_report.md  genomics_pathology_report.md  local_vs_national_coverage_report.md  medicine_price_opacity_report.md  source_transparency_report.md
schema/: AnalysisRecipeRecord.schema.json  AnalysisRecord.schema.json  ConductorTrackRecord.schema.json  CoverageDecisionRecord.schema.json  CrosswalkCandidate.schema.json  DashboardAutomatedReviewPacket.schema.json  DashboardHumanReviewRecord.schema.json  DataAcquisitionAttemptRecord.schema.json  DataCiteMetadata.schema.json  DataDictionaryRecord.schema.json  DataQualityCheckRecord.schema.json  DatasetCandidateRecord.schema.json  EvidenceReadinessRecord.schema.json  FinalHandoffTaskRecord.schema.json  GitHubProjectItemRecord.schema.json  IngestionTaskRecord.schema.json  MappingAdjudicationRecord.schema.json  MappingBlindReviewCase.schema.json  MappingBlindReviewRecord.schema.json  MappingCandidateFrameRecord.schema.json  MappingEvaluationSummary.schema.json  MappingEvidenceRecord.schema.json  MappingHoldoutPrediction.schema.json  MappingResourceRecord.schema.json  MappingReviewerSessionReceipt.schema.json  OntologyConceptRecord.schema.json  OntologyMappingTemplate.schema.json  OntologyRecord.schema.json  OsfPublicationDecision.schema.json  OsfRegistrationDecision.schema.json  OutputArtifactPlanRecord.schema.json  PbsApiAcquisitionRecord.schema.json  ProtocolStatusRecord.schema.json  ProvenanceRecord.schema.json  ResearchLinkageRecord.schema.json  ResearchQuestionRecord.schema.json  RoadmapFunctionRecord.schema.json  RuntimeTargetRecord.schema.json  ScheduleItemRecord.schema.json  SourceAcquisitionPlan.schema.json  (+9 more)
scripts/: __init__.py  apply_action_pin_resolutions.py  approve_mapping_adjudication.py  check_action_sha_pins.py  check_branch_protection.py  check_dashboard_pages_assets.py  check_dashboard_quality.py  check_dashboard_routes.py  check_github_security_settings.py  check_huggingface_bundle.py  check_huggingface_destination.py  check_huggingface_publication_gates.py  check_live_pages.py  check_local_parser_contracts.py  check_mapping_calibration.py  check_osf_cli_contract.py  check_public_data_policy.py  check_public_docs.py  create_github_project_items.py  discover_historical_source_catalog.py  download_historical_sources.py  download_openfda_device_classifications.py  export_handoff_bundle.py  export_json_schema.py  hf_upload_dataset.py  install_optional_toolchains.py  make_architecture_report.py  make_dashboard_owner_review_packet.py  make_dashboard_review_packet.py  make_data_dictionary.py  make_data_quality_report.py  make_evidence_readiness.py  make_final_handoff.py  make_fuzzy_prefilter_benchmark.py  make_github_project_export.py  make_graph_seed.py  make_hcpcs_level_ii_bundle.py  make_historical_source_index.py  make_ingestion_plan.py  make_licence_decision_matrix.py  (+66 more)
tests/: conftest.py  test_registry_readiness_contract.py
(+1033 files in other folders)
